# llava-implementation

./: .gitignore  .pre-commit-config.yaml  ISSUES.md  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  python-app.yml
configs/: data_config.py  model_config.py
docs/: README.md  architecture.md  examples.md  installation.md
docs/api/: README.md
docs/guides/: developer_guide.md  user_guide.md
examples/: api_client.py  process_image.py
models/: __init__.py  llava.py
notebooks/: LLaVA_Demo.ipynb
scripts/: README.md  demo.py  evaluate_vqa.py  test_model.py
src/: requirements.txt
src/api/: app.py
src/configs/: settings.py
src/models/: llava_model.py  main.py
src/utils/: logging.py
tests/: test_model.py
utils/: __init__.py  data_utils.py  eval_utils.py  visualization.py
